--- a/index.html
+++ b/index.html
@@ -102,9 +102,11 @@
         visible: false,
       };
 
+      const sky = document.querySelector("#sky");
+
       const r = reactive({
         time: 0,
-        eventCounter: 46, // NB! FOR TESTING ONLY change to something else than 0
+        eventCounter: 46, // 46 // NB! FOR TESTING ONLY change to something else than 0
         globalFrequency: 1000,
         getDuration,
         getPlaybackRate,
@@ -114,6 +116,8 @@
         messier,
         galactic,
         bigbang,
+
+        sky,
 
         globalRotation: 0, // was 90
         globalScale: 4,
@@ -531,14 +535,23 @@
         } else if (r.time >= sec("17:50") && r.eventCounter < 47) {
           r.distanceMessage = "We are now 100 lightyears away from Earth";
           // Enable clusters2
-          r.messier.clusters2.visible = true;
-          // Fade in clusters2
-          animation({
-            targets: r.messier.clusters2,
-            opacity: 1,
-            duration: r.getDuration("00:10"),
-            easing: "linear",
+          //r.messier.clusters2.visible = true;
+
+          sky.setAttribute('visible', 'true');
+          sky.setAttribute('animation', {
+            property: 'opacity',
+            to: 0.8,
+            dur: r.getDuration("00:10"),
+            easing: 'easeInOutQuad'
           });
+
+          // Fade in clusters2
+          // animation({
+          //   targets: r.messier.clusters2,
+          //   opacity: 1,
+          //   duration: r.getDuration("00:10"),
+          //   easing: "linear",
+          // });
           // Fade out nebulas
           animation({
             targets: r.messier.nebulas,
@@ -884,19 +897,6 @@
           ></a-entity>
         </a-entity>
 
-
-<!--      <a-sphere-->
-<!--              id="sky_sphere"-->
-<!--              opacity="0.8"-->
-<!--              src="#nebula2"-->
-<!--              rotation="0 0 0"-->
-<!--              animation="property: scale; to: 1 1 1; dur: 20000; easing: easeInOutQuad"-->
-<!--              radius="100"-->
-<!--              side="back"-->
-<!--              scale="0.1 0.1 0.1"-->
-<!--              position="0 0 0"-->
-<!--      ></a-sphere>-->
-
         <!-- Galactic -->
 
         <a-entity v-for="g,key,i in r.galactic" :visible="g.visible">
@@ -991,17 +991,20 @@
 
         <img  id="nebula2" src="assets/ant-nebula.jpg">
         <img  id="cluster2" src="assets/perseus_galaxy_cluster.jpg">
-        <img id="nebula3" src="assets/nebula-semitransparent.png">
+        <img id="nebula3" src="assets/nebula2.png">
         <img id="nebula4" src="assets/nebula_x.jpeg">
 
       </a-assets>
 
       <a-sky
               id="sky"
-              opacity="0.8"
+              opacity="0"
+              visible="false"
               src="#nebula4"
               rotation="0 0 0"
-              animation="property: rotation; to: 0 360 -90; loop: true; dur: 2000000; easing: linear"
+            animation="property: rotation; to: 0 360 -90; loop: true; dur: 2000000; easing: linear"
+
+
       >
       </a-sky>
 <!--            <a-sphere-->
