--- a/index.html
+++ b/index.html
@@ -104,6 +104,47 @@
 
       const sky = document.querySelector("#sky");
 
+      function setSky(asset) { // NB# assetName must be given with #
+        if (!sky) return console.warn('Sky element not found.');
+
+        const assetEl = document.querySelector(asset);
+        if (!assetEl) return console.warn(`Asset ${asset} not found.`);
+
+        sky.setAttribute('src', asset);
+      }
+
+      function showSky(fadeTime = 5) {
+        if (!sky) return;
+
+        // Ensure initial opacity is 0 and visible
+        sky.setAttribute('opacity', 0);
+        sky.setAttribute('visible', "true");
+
+        sky.setAttribute('animation', {
+          property: 'opacity',
+          to: 0.8,
+          dur: fadeTime * 1000,
+          easing: 'easeInOutQuad',
+          loop: false
+        });
+      }
+
+      function hideSky(fadeTime = 5) {
+        if (!sky) return;
+
+        sky.setAttribute('animation', {
+          property: 'opacity',
+          to: 0,
+          dur: fadeTime * 1000,
+          easing: 'easeInOutQuad',
+          loop: false
+        });
+
+        setTimeout(() => {
+          sky.setAttribute('visible', false);
+        }, fadeTime * 1000);
+      }
+
       const r = reactive({
         time: 0,
         eventCounter: 46, // 46 // NB! FOR TESTING ONLY change to something else than 0
@@ -537,13 +578,16 @@
           // Enable clusters2
           //r.messier.clusters2.visible = true;
 
-          sky.setAttribute('visible', 'true');
-          sky.setAttribute('animation', {
-            property: 'opacity',
-            to: 0.8,
-            dur: r.getDuration("00:10"),
-            easing: 'easeInOutQuad'
-          });
+          // sky.setAttribute('visible', 'true');
+          // sky.setAttribute('animation', {
+          //   property: 'opacity',
+          //   to: 0.8,
+          //   dur: r.getDuration("00:10"),
+          //   easing: 'easeInOutQuad'
+          // });
+
+          setSky("#nebula3");
+          showSky(10);
 
           // Fade in clusters2
           // animation({
@@ -603,17 +647,18 @@
             easing: "linear",
           });
           // Fade out nebulas
-          animation({
-            targets: r.messier.clusters2,
-            opacity: 0,
-            duration: r.getDuration("00:10"),
-            easing: "linear",
-          });
+          // animation({
+          //   targets: r.messier.clusters2,
+          //   opacity: 0,
+          //   duration: r.getDuration("00:10"),
+          //   easing: "linear",
+          // });
+          hideSky(10);
           r.eventCounter++;
         } else if (r.time >= sec("21:10") && r.eventCounter < 55) {
           // galaxies are still playing...
           // clusters2 done fading, hide
-          r.messier.clusters2.visible = false;
+          // r.messier.clusters2.visible = false;
           r.eventCounter++;
         } else if (r.time >= sec("21:30") && r.eventCounter < 56) {
           r.distanceMessage = "We are now million lightyears away from Earth";
@@ -811,6 +856,92 @@
       arjs="sourceType: webcam; debugUIEnabled: false;"
     >
 
+      <!-- Assets -->
+
+      <a-assets>
+        <a-asset-item
+                autoload
+                id="cometronics"
+                src="assets/cometonics.glb"
+        ></a-asset-item>
+
+        <a-asset-item
+                autoload
+                id="mercury"
+                src="assets/mercury.glb"
+        ></a-asset-item>
+        <a-asset-item
+                autoload
+                id="jupiter"
+                src="assets/jupiter.glb"
+        ></a-asset-item>
+
+
+        <a-asset-item autoload id="earth" src="assets/earth.glb"></a-asset-item>
+        <a-asset-item autoload id="mars" src="assets/mars.glb"></a-asset-item>
+        <a-asset-item autoload id="venus" src="assets/venus.glb"></a-asset-item>
+
+        <a-asset-item
+                autoload
+                id="saturn"
+                src="assets/saturn.glb"
+        ></a-asset-item>
+
+        <a-asset-item
+                autoload
+                id="clusters"
+                src="assets/clusters.glb"
+        ></a-asset-item>
+        <a-asset-item
+                autoload
+                id="clusters2"
+                src="assets/space_nebula.glb"
+        ></a-asset-item>
+        <a-asset-item
+                autoload
+                id="nebulas"
+                src="assets/nebulas.glb"
+        ></a-asset-item>
+        <a-asset-item
+                autoload
+                id="galaxies"
+                src="assets/galaxies.glb"
+        ></a-asset-item>
+        <a-asset-item
+                autoload
+                id="superclusters"
+                src="assets/superclusters.glb"
+        ></a-asset-item>
+        <a-asset-item
+                autoload
+                id="radiogalaxies"
+                src="assets/radiogalaxies.glb"
+        ></a-asset-item>
+        <a-asset-item
+                autoload
+                id="quasars"
+                src="assets/quasars.glb"
+        ></a-asset-item>
+
+        <img id="blob" src="assets/blob.png" />
+
+        <img  id="nebula2" src="assets/ant-nebula.jpg">
+        <img  id="galaxy2" src="assets/perseus_galaxy_cluster.jpg">
+        <img id="nebula3" src="assets/nebula2.png">
+        <img id="nebula4" src="assets/nebula_x.jpeg">
+
+      </a-assets>
+
+      <a-sky
+              id="sky"
+              opacity="0"
+              visible="false"
+              src="#nebula4"
+              rotation="0 0 0"
+              animation="property: rotation; to: 0 360 -90; loop: true; dur: 2000000; easing: linear"
+      >
+      </a-sky>
+
       <!-- Planets -->
 <!--          orig:-->
 <!--      <a-entity-->
@@ -916,97 +1047,9 @@
 
       <a-camera></a-camera>
 
-      <!-- Assets -->
-
-      <a-assets>
-        <a-asset-item
-          autoload
-          id="cometronics"
-          src="assets/cometonics.glb"
-        ></a-asset-item>
-
-        <a-asset-item
-          autoload
-          id="mercury"
-          src="assets/mercury.glb"
-        ></a-asset-item>
-        <a-asset-item
-          autoload
-          id="jupiter"
-          src="assets/jupiter.glb"
-        ></a-asset-item>
-
-        <!-- <a-asset-item
-        autoload
-        id="jupiter"
-        src="archive/planets/Jupiter_1_142984.glb"
-      ></a-asset-item> -->
-        <a-asset-item autoload id="earth" src="assets/earth.glb"></a-asset-item>
-        <a-asset-item autoload id="mars" src="assets/mars.glb"></a-asset-item>
-        <a-asset-item autoload id="venus" src="assets/venus.glb"></a-asset-item>
-
-        <a-asset-item
-          autoload
-          id="saturn"
-          src="assets/saturn.glb"
-        ></a-asset-item>
-
-        <a-asset-item
-          autoload
-          id="clusters"
-          src="assets/clusters.glb"
-        ></a-asset-item>
-        <a-asset-item
-          autoload
-          id="clusters2"
-          src="assets/space_nebula.glb"
-        ></a-asset-item>
-        <a-asset-item
-          autoload
-          id="nebulas"
-          src="assets/nebulas.glb"
-        ></a-asset-item>
-        <a-asset-item
-          autoload
-          id="galaxies"
-          src="assets/galaxies.glb"
-        ></a-asset-item>
-        <a-asset-item
-          autoload
-          id="superclusters"
-          src="assets/superclusters.glb"
-        ></a-asset-item>
-        <a-asset-item
-          autoload
-          id="radiogalaxies"
-          src="assets/radiogalaxies.glb"
-        ></a-asset-item>
-        <a-asset-item
-          autoload
-          id="quasars"
-          src="assets/quasars.glb"
-        ></a-asset-item>
-
-        <img id="blob" src="assets/blob.png" />
-
-        <img  id="nebula2" src="assets/ant-nebula.jpg">
-        <img  id="cluster2" src="assets/perseus_galaxy_cluster.jpg">
-        <img id="nebula3" src="assets/nebula2.png">
-        <img id="nebula4" src="assets/nebula_x.jpeg">
-
-      </a-assets>
-
-      <a-sky
-              id="sky"
-              opacity="0"
-              visible="false"
-              src="#nebula4"
-              rotation="0 0 0"
-            animation="property: rotation; to: 0 360 -90; loop: true; dur: 2000000; easing: linear"
 
 
-      >
-      </a-sky>
+
 <!--            <a-sphere-->
 <!--                    id="sky_sphere"-->
 <!--                    opacity="0.8"-->
